[tool.poetry]
name = "ssecscanner2junit"
version = "0.1.7"
description = "Convert Security Scanner Output to JUnit Format"
authors = ["Florian Angermeir <florian.angermeir@tum.de>"]
license = "GPL-3.0-only"
packages = [
  { include = 'secscanner2junit' },
]

[tool.poetry.dependencies]
python = "^3.9"
junit-xml = "^1.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ss2ju = "secscanner2junit:main"
